feat: abstract away react-uid and remove it from deps
This is to allow for React 17/18 compatibility, with additional steps
required for React 17 compat.

BREAKING CHANGE: Message to be amended

--- a/docs/src/documentation/02-foundation/10-typography/02-circular-pro.mdx
+++ b/docs/src/documentation/02-foundation/10-typography/02-circular-pro.mdx
@@ -38,6 +38,7 @@ It's actually not much harder, just a few more steps .
 #### 2. Change theme object
 
 ```jsx
+import React from "react"
 import getTokens from "@kiwicom/orbit-components/lib/getTokens"
 import OrbitProvider from "@kiwicom/orbit-components/lib/OrbitProvider"
 const customTokens = getTokens({
@@ -47,7 +48,7 @@ const customTokens = getTokens({
   }
 })
 
-<OrbitProvider theme={{orbit: customTokens}}>
+<OrbitProvider useId={React.useId} theme={{orbit: customTokens}}>
   <App />
 </OrbitProvider>
 ```
