--- a/docs/src/documentation/05-development/04-migration-guides/01-v23.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v23.mdx
@@ -12,6 +12,12 @@ With this guide, we aim to walk through all the breaking changes and how they ca
 
 ## Breaking changes
 
+### Removal of ariaLabel prop in NavigationBar
+
+The `NavigationBar` component now renders a `header` element instead of a `nav` element, and the `ariaLabel` prop has been removed.
+
+If you're using `NavigationBar` with `ariaLabel`, you now need to set the `aria-label` attribute on the `nav` element(s) passed as children to `NavigationBar`.
+
 ### Title prop for Skeleton component
 
 The `Skeleton` component used to have a default value for the prop `title`. We have removed this default value.
