--- a/docs/src/documentation/05-development/04-migration-guides/01-v23.mdx
+++ b/docs/src/documentation/05-development/04-migration-guides/01-v23.mdx
@@ -24,6 +24,12 @@ The `NavigationBar` component now renders a `header` element instead of a `nav` 
 
 If you're using `NavigationBar` with `ariaLabel`, you now need to set the `aria-label` attribute on the `nav` element(s) passed as children to `NavigationBar`.
 
+### Removal of aria-label default value in TabList
+
+The `TabList` component used to have a default value for the `aria-label` attribute. We have removed this default value.
+
+You can set this value by passing the `ariaLabel` or `ariaLabelledby` prop to the `TabList` component.
+
 ### Removal of Tooltip prop in Checkbox and Radio
 
 The `tooltip` prop in `Checkbox` and `Radio` components has been removed.
@@ -65,6 +71,78 @@ intl.formatMessage({
 ```
 
 Feel free to customize the translations according to your needs, by providing more specific context to the object it refers to.
+
+### Required prop labelRemove in InputFile
+
+The `InputFile` component used to have a value for the file remove button. We removed this value, so now you need to provide it via required `labelRemove` prop.
+
+This `labelRemove` prop provides the label for the remove button so that assistive technologies can announce it correctly, given that it renders a button with just an icon.
+
+**Before:**
+
+```jsx
+import InputFile from "@kiwicom/orbit-components/lib/InputFile";
+
+<InputFile fileName="document.pdf" onRemoveFile={handleRemove} />;
+```
+
+**Now:**
+
+```jsx
+import InputFile from "@kiwicom/orbit-components/lib/InputFile";
+
+<InputFile fileName="document.pdf" onRemoveFile={handleRemove} labelRemove="Remove file" />;
+```
+
+Make sure to provide translated strings for the `labelRemove` prop.
+
+To ease the migration, we provide a codemod to help you out, with some default generic translations.
+The codemod will inject `intl.formatMessage` calls with the default translations, in this case:
+
+```jsx
+intl.formatMessage({
+  id: "common.screenreader.remove_file.button",
+  defaultMessage: "Remove file",
+});
+```
+
+Feel free to customize the translations according to your needs, but please maintain the same translation key structure (`common.screenreader.*`) when requesting translations.
+
+### Required prop labelClear in InputSelect
+
+The `InputSelect` component used to have a value for the selected value remove button. We removed this value, so now you need to provide it via required `labelClear` prop.
+
+This `labelClear` prop provides the label for the clear button so that assistive technologies can announce it correctly, given that it renders a button with just an icon.
+
+**Before:**
+
+```jsx
+import InputSelect from "@kiwicom/orbit-components/lib/InputSelect";
+
+<InputSelect options={options} />;
+```
+
+**Now:**
+
+```jsx
+import InputSelect from "@kiwicom/orbit-components/lib/InputSelect";
+
+<InputSelect options={options} labelClear="Clear value" />;
+```
+
+Make sure to provide translated strings for the `labelClear` prop.
+
+To ease the migration, we provide a codemod to help you out, with some default generic translations.
+The codemod will inject `intl.formatMessage` calls with the default translations, in this case:
+
+```jsx
+intl.formatMessage({
+  id: "common.screenreader.clear_value.button",
+  defaultMessage: "Clear value",
+});
+```
+
+Feel free to customize the translations according to your needs, but please maintain the same translation key structure (`common.screenreader.*`) when requesting translations.
 
 ### Prop name change in Stepper and StepperStateless
 
