docs: add more accurate non visual description in FeatureIcon guidelines

--- a/docs/src/documentation/03-components/08-visuals/featureicon/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/08-visuals/featureicon/01-guidelines.mdx
@@ -26,4 +26,4 @@ import ShortNonvisualSnippet from "snippets/short-nonvisual.mdx";
 
 ## Content
 
-<ShortNonvisualSnippet version={2} visual="icon" associated="feature" />
+<ShortNonvisualSnippet visual="icon" associated="feature" />
